# whatismyip

./: Cargo.toml  README.md  pkg_lin.sh  pkg_mac.sh  pkg_win.cmd  whatismyip.json
manifests/m/maciak/whatismyip/0.2.1/: maciak.whatismyip.installer.yaml  maciak.whatismyip.locale.en-US.yaml  maciak.whatismyip.yaml
src/: main.rs
