[package]
name = "whatismyip"
version = "0.2.2"
author = "Luke Maciak"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
local-ip-address = "0.5.4"
reqwest = { version = "0.11.18", features = ["blocking"] }
